# twin-type

./: Cargo.toml
src/: force_end.rs  in_game.rs  main.rs  main_menu.rs  result_screen.rs  show_fps.rs  status_board.rs
src/word_typing/: choice_word.rs  mod.rs  sharing.rs  wordbook.rs
tools/: README.md  pyproject.toml
tools/src/tools/: __init__.py  evaluation.py  generate_wordbook.py  get_words.py  word.py
