[package]
name = "twin-type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"

tpg-kb-util = {git = "https://github.com/nahco314/tpg-kb-util"}
successive_romaji = {git = "https://github.com/nahco314/successive_romaji"}
