[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nahco314", email = "nahco3_ta@yahoo.co.jp" }
]
dependencies = [
    "setuptools>=69.5.1",
    "successive-romaji>=0.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "tools:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tools"]
